Started programming main window. -Added Menu Bar -Added function that is called on closing of window

--- a/MRexcite_config.ini
+++ b/MRexcite_config.ini
@@ -13,6 +13,11 @@ clock_divider = 8
 address = 255
 [Optical_Module]
 address = 254
+pre_amp_on = 0
+pre_amp_on_always = 0
+Tx_always_on = 0
+det_always = 1
+det_never = 0
 [RF_prep_Module]
 address = 253
 gain_high=20
