Added Support for 2 different Modulation variants, Full and Hybrid. - Two different calibration function are used, depending on modulation variant. Hybrid function now only contains zero offset. Offset for different gain and phase in I and Q need to be implemented in the future. - Zero Offset calibration is now included with 2 variations according to modulation variant.

--- a/MRexcite_config.ini
+++ b/MRexcite_config.ini
@@ -31,4 +31,5 @@ max_amplitude_low = 40
 max_duty_high = 20
 [Calibration]
 Calibration_File_Zero_Point = MRexcite_zero_calib.cal
+Calibration_File_Zero_Point_Hybrid = MRexcite_zero_calib_hybrid.cal
 Calibration_File_1D = MRexcite_1D_cal.npy
