Added functionality for modulator calibration for hybrid modulation.

--- a/MRexcite_config.ini
+++ b/MRexcite_config.ini
@@ -33,3 +33,4 @@ max_duty_high = 20
 Calibration_File_Zero_Point = MRexcite_zero_calib.cal
 Calibration_File_Zero_Point_Hybrid = MRexcite_zero_calib_hybrid.cal
 Calibration_File_1D = MRexcite_1D_cal.npy
+Calibration_File_Mod = MRexcite_Mod_calib.npy
