--- a/MRexcite_config.ini
+++ b/MRexcite_config.ini
@@ -34,3 +34,6 @@ Calibration_File_Zero_Point = MRexcite_zero_calib.cal
 Calibration_File_Zero_Point_Hybrid = MRexcite_zero_calib_hybrid.cal
 Calibration_File_1D = MRexcite_1D_cal.npy
 Calibration_File_Mod = MRexcite_Mod_calib.npy
+[Standard_Files]
+CP_plus = Cp_plus.mat
+Simple_TIAMO = Simple_TIAMO.mat
