Several fixes: -Added normalization for Linearity Calibration -Changed explanatory images in Calibration GUIs -Added some comments for clarity

--- a/MRexcite_config.ini
+++ b/MRexcite_config.ini
@@ -33,6 +33,7 @@ max_duty_high = 20
 Calibration_File_Zero_Point = MRexcite_zero_calib.cal
 Calibration_File_Zero_Point_Hybrid = MRexcite_zero_calib_hybrid.cal
 Calibration_File_1D = MRexcite_1D_cal.npy
+Calibration1D_reference = -12
 Calibration_File_Mod = MRexcite_Mod_calib.npy
 [Standard_Files]
 CP_plus = Cp_plus.mat
